--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -61,7 +61,7 @@
       <!-- end density-table-2 -->
     </section>
     <section id="graphing">
-      <h2>Grahping</h2>
+      <h2>Graphing</h2>
       <img src="media/absorbance-concentration-graph.png" alt="Graph of absorbance versus concentration.">
     </section>
     <section id="math-equations">
