tables added to report

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -56,8 +56,80 @@
     <section id="data-tables">
       <h2>Data Tables</h2>
       <!-- start density-table-1 -->
+      <table>
+        <thead>
+          <tr>
+            <th>MASS (g)</th>
+            <th>VOLUME (mL)</th>
+            <th>DENSITY (g/mL)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>3.2204</td>
+            <td>10.32</td>
+            <td>0.3121</td>
+          </tr>
+          <tr>
+            <td>3.2041</td>
+            <td>10.30</td>
+            <td>0.3111</td>
+          </tr>
+          <tr>
+            <td>3.2991</td>
+            <td>10.33</td>
+            <td>0.3194</td>
+          </tr>
+          <tr>
+            <td>3.2000</td>
+            <td>10.27</td>
+            <td>0.3116</td>
+          </tr>
+          <tr>
+            <td>3.2518</td>
+            <td>10.29</td>
+            <td>0.3160</td>
+          </tr>
+        </tbody>
+      </table>
       <!-- end density-table-1 -->
       <!-- start density-table-2 -->
+      <table>
+        <thead>
+          <tr>
+            <th>MASS (g)</th>
+            <th>VOLUME (mL)</th>
+            <th>DENSITY (g/mL)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>3.2204 ± 0.0001</td>
+            <td>10.32 ± 0.01</td>
+            <td>0.3121 ± 0.0003</td>
+          </tr>
+          <tr>
+            <td>3.2041 ± 0.0001</td>
+            <td>10.30 ± 0.01</td>
+            <td>0.3111 ± 0.0003</td>
+          </tr>
+          <tr>
+            <td>3.2991 ± 0.0001</td>
+            <td>10.33 ± 0.01</td>
+            <td>0.3194 ± 0.0003</td>
+          </tr>
+          <tr>
+            <td>3.2000 ± 0.0001</td>
+            <td>10.27 ± 0.01</td>
+            <td>0.3116 ± 0.0003</td>
+          </tr>
+          <tr>
+            <td>3.2518 ± 0.0001</td>
+            <td>10.29 ± 0.01</td>
+            <td>0.3160 ± 0.0003</td>
+          </tr>
+        </tbody>
+      </table>
       <!-- end density-table-2 -->
     </section>
     <section id="graphing">
