indent turned into a class

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -41,13 +41,13 @@
   <main>
     <section id="abstract">
       <h2>Abstract</h2>
-      <p>
+      <p class="indent">
         The goal of this whole project is to be able to create a lab report using python and HTML+CSS.
         The original goal was to use markdown, but the lack of functionality was limiting.
         For many kinds of complex structure or formatting, HTML+CSS would have to be resorted to anyways.
         Mixing HTML tags with markdown tags also felt very messy and hard to organize.
       </p>
-      <p>
+      <p class="indent">
         In addition, using HTML at the outset removes the dependance on a markdown renderer and its particular nuances.
         This keeps the HTML from changing unexpectantly (main exception being the Katex equations between <code>$</code> or <code>$$</code>).
         It also opens the door for custom JavaScript code to manipulate the DOM and apply special styles to elements meeting certain conditions.
