caption added to tables

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -57,6 +57,7 @@
       <h2>Data Tables</h2>
       <!-- start density-table-1 -->
       <table>
+        <caption>Density Table (regular)</caption>
         <thead>
           <tr>
             <th>MASS (g)</th>
@@ -95,6 +96,7 @@
       <!-- end density-table-1 -->
       <!-- start density-table-2 -->
       <table>
+        <caption>Density Table (absolute error)</caption>
         <thead>
           <tr>
             <th>MASS (g)</th>
