--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -57,7 +57,7 @@
       </p>
       <p class="indent">
         In addition, using HTML at the outset removes the dependance on a markdown renderer and its particular nuances.
-        This keeps the HTML from changing unexpectantly (main exception being the Katex equations between <code>$</code> or <code>$$</code>).
+        This keeps the HTML from changing unexpectedly (main exception being the Katex equations between <code>$</code> or <code>$$</code>).
         It also opens the door for custom JavaScript code to manipulate the DOM and apply special styles to elements meeting certain conditions.
       </p>
     </section>
