img put inside figure with caption

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -144,7 +144,10 @@
     </section>
     <section id="graphing">
       <h2>Graphing</h2>
-      <img src="media/absorbance-concentration-graph.png" alt="Graph of absorbance versus concentration.">
+      <figure>
+        <figcaption>Absorbance vs. Concentration</figcaption>
+        <img src="media/absorbance-concentration-graph.png" alt="Graph of absorbance versus concentration.">
+      </figure>
     </section>
     <section id="math-equations">
       <h2>Math Equations</h2>
