hit regions made foldable in vscode

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -63,7 +63,7 @@
     </section>
     <section id="data-tables">
       <h2>Data Tables</h2>
-      <!-- start density-table-1 -->
+      <!-- #region density-table-1 -->
       <table>
         <caption>Density Table (regular)</caption>
         <thead>
@@ -101,8 +101,8 @@
           </tr>
         </tbody>
       </table>
-      <!-- end density-table-1 -->
-      <!-- start density-table-2 -->
+      <!-- #endregion density-table-1 -->
+      <!-- #region density-table-2 -->
       <table>
         <caption>Density Table (absolute error)</caption>
         <thead>
@@ -140,7 +140,7 @@
           </tr>
         </tbody>
       </table>
-      <!-- end density-table-2 -->
+      <!-- #endregion density-table-2 -->
     </section>
     <section id="graphing">
       <h2>Graphing</h2>
