--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Test Report</title>
-  <link rel="stylesheet" href="../report-styles.css">
+  <link rel="stylesheet" href="../general-report-styles.css">
 
   <!-- Katex equation rendering & Paged JS -->
   <link rel="stylesheet" href="../katex/katex.min.css">
