--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Test Report</title>
-  <link rel="stylesheet" href="../general-report-styles.css">
+  <link rel="stylesheet" href="../rendering/general-report-styles.css">
 
   <!-- Katex equation rendering & Paged JS -->
-  <link rel="stylesheet" href="../katex/katex.min.css">
-  <script defer src="../katex/katex.min.js"></script>
-  <script defer src="../katex/auto-render.min.js"></script>
-  <script src="../pagedjs/paged.polyfill.js"></script>
+  <link rel="stylesheet" href="../rendering/katex/katex.min.css">
+  <script defer src="../rendering/katex/katex.min.js"></script>
+  <script defer src="../rendering/katex/auto-render.min.js"></script>
+  <script src="../rendering/pagedjs/paged.polyfill.js"></script>
   <script>
     class katexHandler extends Paged.Handler {
       constructor(chunker, polisher, caller) {
