data-table section updated

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -73,6 +73,11 @@
     </section>
     <section id="data-tables">
       <h2>Data Tables</h2>
+      <p class="indent">
+        The raw data for these tables came from CSV files.
+        Python was used to perform calculations with the data and insert the tables into the HTML file.
+        See <a href="script.py">script.py</a> for the code used.
+      </p>
       <!-- #region density-table-1 -->
       <table>
         <caption>Density Table (regular)</caption>
