motivation section started

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -66,6 +66,28 @@
         In addition, using HTML at the outset removes the dependance on a Markdown renderer and its particular nuances.
       </p>
     </section>
+    <section>
+      <h2>Motivation</h2>
+      <p class="indent">
+        I think it is worth talking about the motivation behind starting this project.
+        At some point, I wanted to try out using the
+        <a href="https://marketplace.visualstudio.com/items?itemName=vscodevim.vim">Vim extension</a> for
+        <a href="https://code.visualstudio.com/">Visual Studio Code</a>, a text editor I have enjoyed using.
+        Since I was not doing much coding at the time because of school, I figured I could try out taking notes with Markdown.
+        For one of my classes I would take notes in Markdown with my text editor, and for another class I would take notes in
+        <a href="https://docs.google.com/">Google Docs</a>, my previous tool of choice.
+        After the semester, I would reflect and see which one I preferred.
+      </p>
+      <p class="indent">
+        I ended up thoroughly enjoying taking notes with Vim and Markdown.
+        The modal editing and the composability of commands came naturally to me, making a variety of tasks quicker and reducing reliance on the <em>dreaded</em> mouse.
+        Macros and the default support for Regular Expressions were icing on the cake that I did not expect going in.
+        I could go on and on about what I liked about the editing style.
+      </p>
+      <p class="indent">
+        At the same time as I was starting to enjoy this new workflow, certain little things were starting to bug me about editing in Google Docs.
+      </p>
+    </section>
     <section id="data-tables">
       <h2>Data Tables</h2>
       <p class="indent">
