one sentence per line

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -16,7 +16,7 @@
       constructor(chunker, polisher, caller) {
         super(chunker, polisher, caller);
       }
-      
+
       beforeParsed(content) {
         renderMathInElement(content, {
           delimiters: [
@@ -53,9 +53,7 @@
         In particular, <a href="https://katex.org/">$\KaTeX$</a> is used for rendering inline equations (between <code>$</code>) and block equations (between <code>$$</code>).
         In addition, <a href="https://pagedjs.org/">paged.js</a> is used for translating the Paged Media standards, published by the W3C, into a form that is more widely supported.
         Python handles the programmatic generation of content, such as HTML data tables and graph images.
-        Some modules used include <a href="https://matplotlib.org/">Matplotlib</a> for graphing,
-        a custom module for creating numbers that have an associated amount uncertainty/error and number of significant figures,
-        and a custom module for creating data table structures that readily support column-wise operations.
+        Some modules used include <a href="https://matplotlib.org/">Matplotlib</a> for graphing, a custom module for creating numbers that have an associated amount uncertainty/error and number of significant figures, and a custom module for creating data table structures that readily support column-wise operations.
       </p>
       <p class="indent">
         The original goal was to use Markdown over HTML, but the lack of functionality in its syntax was limiting.
@@ -70,12 +68,9 @@
       <h2>Motivation</h2>
       <p class="indent">
         I think it is worth talking about the motivation behind starting this project.
-        At some point, I wanted to try out using the
-        <a href="https://marketplace.visualstudio.com/items?itemName=vscodevim.vim">Vim extension</a> for
-        <a href="https://code.visualstudio.com/">Visual Studio Code</a>, a text editor I have enjoyed using.
+        At some point, I wanted to try out using the <a href="https://marketplace.visualstudio.com/items?itemName=vscodevim.vim">Vim extension</a> for <a href="https://code.visualstudio.com/">Visual Studio Code</a>, a text editor I have enjoyed using.
         Since I was not doing much coding at the time because of school, I figured I could try out taking notes with Markdown.
-        For one of my classes I would take notes in Markdown with my text editor, and for another class I would take notes in
-        <a href="https://docs.google.com/">Google Docs</a>, my previous tool of choice.
+        For one of my classes I would take notes in Markdown with my text editor, and for another class I would take notes in <a href="https://docs.google.com/">Google Docs</a>, my previous tool of choice.
         After the semester, I would reflect and see which one I preferred.
       </p>
       <p class="indent">
