keybinding complaint added

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -81,6 +81,15 @@
       </p>
       <p class="indent">
         At the same time as I was starting to enjoy this new workflow, certain little things were starting to bug me about editing in Google Docs.
+        Don't get me wrong, there are still things I like about Google Docs.
+        I am sure it will still be my goto tool if I ever need to collaborate on a project with people who are less experienced in coding.
+        One thing that bothered me was the inability to create custom keyboard shortcuts.
+        Google Docs does have a feature that allows you to set text patterns that can autocorrect into something else.
+        While that is handy, what I was more interested in was a way to cause certain formatting changes when certain keys are pressed, similar to how <kbd>Ctrl+B</kbd> makes text bold, <kbd>Ctrl+I</kbd> makes text italics, <kbd>Ctrl+U</kbd> underlines, and so on.
+        Styles like background color and text color were virtually off limits to the keyboard.
+        Well, technically they could be accessed by pressing <kbd>Alt+/</kbd> and typing the full name from there, but it is a little cumbersome.
+        In contrast, creating hotkeys in a text editor is relatively straightforward.
+        Usually there will some kind of longer command, but it can be remapped to something shorter if it is used often.
       </p>
     </section>
     <section id="data-tables">
