small report edits

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -83,7 +83,7 @@
         At the same time as I was starting to enjoy this new workflow, certain little things were starting to bug me about editing in Google Docs.
         Don't get me wrong, there are still things I like about Google Docs.
         I am sure it will still be my goto tool if I ever need to collaborate on a project with people who are less experienced in coding.
-        One thing that bothered me was the inability to create custom keyboard shortcuts.
+        Anyways, one thing that bothered me was the inability to create custom keyboard shortcuts.
         Google Docs does have a feature that allows you to set text patterns that can autocorrect into something else.
         While that is handy, what I was more interested in was a way to cause certain formatting changes when certain keys are pressed, similar to how <kbd>Ctrl+B</kbd> makes text bold, <kbd>Ctrl+I</kbd> makes text italics, <kbd>Ctrl+U</kbd> underlines, and so on.
         Styles like background color and text color were virtually off limits to the keyboard.
