--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -69,6 +69,7 @@
       <p class="indent">
         I think it is worth talking about the motivation behind starting this project.
         At some point, I wanted to try out using the <a href="https://marketplace.visualstudio.com/items?itemName=vscodevim.vim">Vim extension</a> for <a href="https://code.visualstudio.com/">Visual Studio Code</a>, a text editor I have enjoyed using.
+        <span class="footnote">Although, I have since switched to using the <a href="https://marketplace.visualstudio.com/items?itemName=asvetliakov.vscode-neovim">VSCode Neovim extension</a> instead.</span>
         Since I was not doing much coding at the time because of school, I figured I could try out taking notes with Markdown.
         For one of my classes I would take notes in Markdown with my text editor, and for another class I would take notes in <a href="https://docs.google.com/">Google Docs</a>, my previous tool of choice.
         After the semester, I would reflect and see which one I preferred.
