more equation samples added

--- a/reports/test-report/report.html
+++ b/reports/test-report/report.html
@@ -191,10 +191,21 @@
       <p>
         Block:
         $$a^2 + b^2 = c^2$$
+        $$\vec{a} = \dfrac {d\vec{v}}{dt}$$
       </p>
       <p>
         Inline:
         $a^2 + b^2 = c^2$
+        <br>
+        $\vec{a} = \dfrac {d\vec{v}}{dt}$
+      </p>
+      <p>
+        Macro Example:
+        <br>
+        <code>$\gdef\iprop#1#2#3{#1=\dfrac{#2}{#3}}$</code>
+        <br>
+        $\gdef\iprop#1#2#3{#1=\dfrac{#2}{#3}}$
+        $\iprop{a}{F_{net}}{m}$
       </p>
     </section>
   </main>
