--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -70,7 +70,7 @@
       </p>
     </section>
 
-    <section id="Conclusion">
+    <section id="conclusion">
       <h2>Conclusion</h2>
       <p class="indent">
       </p>
