--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -68,6 +68,228 @@
       <h2>Data</h2>
       <p class="indent">
       </p>
+      <!-- #region slow-ball-table -->
+      <table>
+        <caption>Run 1 Logger Pro Video Data</caption>
+        <thead>
+          <tr>
+            <th>Time (s)</th>
+            <th>X (m)</th>
+            <th>Y (m)</th>
+            <th>X Velocity (m/s)</th>
+            <th>Y Velocity (m/s)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>0.03400</td>
+            <td>0</td>
+            <td>0.8804</td>
+            <td>0.582</td>
+            <td>-0.273</td>
+          </tr>
+          <tr>
+            <td>0.06700</td>
+            <td>0.01786</td>
+            <td>0.8751</td>
+            <td>0.629</td>
+            <td>-0.441</td>
+          </tr>
+          <tr>
+            <td>0.1000</td>
+            <td>0.04107</td>
+            <td>0.8590</td>
+            <td>0.664</td>
+            <td>-0.699</td>
+          </tr>
+          <tr>
+            <td>0.1340</td>
+            <td>0.06251</td>
+            <td>0.8304</td>
+            <td>0.689</td>
+            <td>-1.019</td>
+          </tr>
+          <tr>
+            <td>0.1670</td>
+            <td>0.08751</td>
+            <td>0.7911</td>
+            <td>0.705</td>
+            <td>-1.381</td>
+          </tr>
+          <tr>
+            <td>0.2000</td>
+            <td>0.1107</td>
+            <td>0.7393</td>
+            <td>0.675</td>
+            <td>-1.743</td>
+          </tr>
+          <tr>
+            <td>0.2340</td>
+            <td>0.1322</td>
+            <td>0.6733</td>
+            <td>0.655</td>
+            <td>-2.068</td>
+          </tr>
+          <tr>
+            <td>0.2670</td>
+            <td>0.1536</td>
+            <td>0.6000</td>
+            <td>0.660</td>
+            <td>-2.368</td>
+          </tr>
+          <tr>
+            <td>0.3000</td>
+            <td>0.1768</td>
+            <td>0.5161</td>
+            <td>0.642</td>
+            <td>-2.640</td>
+          </tr>
+          <tr>
+            <td>0.3340</td>
+            <td>0.1964</td>
+            <td>0.4232</td>
+            <td>0.626</td>
+            <td>-2.900</td>
+          </tr>
+          <tr>
+            <td>0.3670</td>
+            <td>0.2179</td>
+            <td>0.3215</td>
+            <td>0.624</td>
+            <td>-3.127</td>
+          </tr>
+          <tr>
+            <td>0.4000</td>
+            <td>0.2393</td>
+            <td>0.2125</td>
+            <td>0.582</td>
+            <td>-3.215</td>
+          </tr>
+          <tr>
+            <td>0.4340</td>
+            <td>0.2572</td>
+            <td>0.1018</td>
+            <td>0.534</td>
+            <td>-3.188</td>
+          </tr>
+          <tr>
+            <td>0.4670</td>
+            <td>0.2732</td>
+            <td>0</td>
+            <td>0.505</td>
+            <td>-3.135</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- #endregion slow-ball-table -->
+
+      <!-- #region fast-ball-table -->
+      <table>
+        <caption>Run 1 Logger Pro Video Data</caption>
+        <thead>
+          <tr>
+            <th>Time (s)</th>
+            <th>X (m)</th>
+            <th>Y (m)</th>
+            <th>X Velocity (m/s)</th>
+            <th>Y Velocity (m/s)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>0.2340</td>
+            <td>0</td>
+            <td>0.8840</td>
+            <td>1.115</td>
+            <td>-0.521</td>
+          </tr>
+          <tr>
+            <td>0.2670</td>
+            <td>0.03529</td>
+            <td>0.8716</td>
+            <td>1.166</td>
+            <td>-0.728</td>
+          </tr>
+          <tr>
+            <td>0.3000</td>
+            <td>0.07587</td>
+            <td>0.8434</td>
+            <td>1.209</td>
+            <td>-1.003</td>
+          </tr>
+          <tr>
+            <td>0.3340</td>
+            <td>0.1182</td>
+            <td>0.8064</td>
+            <td>1.202</td>
+            <td>-1.333</td>
+          </tr>
+          <tr>
+            <td>0.3670</td>
+            <td>0.1570</td>
+            <td>0.7552</td>
+            <td>1.171</td>
+            <td>-1.717</td>
+          </tr>
+          <tr>
+            <td>0.4000</td>
+            <td>0.1959</td>
+            <td>0.6917</td>
+            <td>1.123</td>
+            <td>-2.058</td>
+          </tr>
+          <tr>
+            <td>0.4340</td>
+            <td>0.2329</td>
+            <td>0.6158</td>
+            <td>1.058</td>
+            <td>-2.353</td>
+          </tr>
+          <tr>
+            <td>0.4670</td>
+            <td>0.2664</td>
+            <td>0.5329</td>
+            <td>1.005</td>
+            <td>-2.608</td>
+          </tr>
+          <tr>
+            <td>0.5000</td>
+            <td>0.2982</td>
+            <td>0.4446</td>
+            <td>0.979</td>
+            <td>-2.879</td>
+          </tr>
+          <tr>
+            <td>0.5340</td>
+            <td>0.3317</td>
+            <td>0.3388</td>
+            <td>0.963</td>
+            <td>-3.111</td>
+          </tr>
+          <tr>
+            <td>0.5670</td>
+            <td>0.3635</td>
+            <td>0.2347</td>
+            <td>0.930</td>
+            <td>-3.282</td>
+          </tr>
+          <tr>
+            <td>0.6000</td>
+            <td>0.3935</td>
+            <td>0.1217</td>
+            <td>0.888</td>
+            <td>-3.434</td>
+          </tr>
+          <tr>
+            <td>0.6340</td>
+            <td>0.4217</td>
+            <td>0</td>
+            <td>0.855</td>
+            <td>-3.523</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- #endregion fast-ball-table -->
     </section>
 
     <section id="conclusion">
