--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -183,9 +183,33 @@
       </table>
       <!-- #endregion slow-ball-table -->
 
+      <!-- #region slow-ball-graphs -->
+      <figure>
+        <figcaption>Run 1—Horizontal Position vs Time</figcaption>
+        <img src="media/slow-x-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 1—Vertical Position vs Time</figcaption>
+        <img src="media/slow-y-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 1—Horizontal Velocity vs Time</figcaption>
+        <img src="media/slow-vx-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 1—Vertical Velocity vs Time</figcaption>
+        <img src="media/slow-vy-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 1—Vertical Position vs Horizontal Position</figcaption>
+        <img src="media/slow-y-x.png">
+      </figure>
+      
+      <!-- #endregion slow-ball-graphs -->
+
       <!-- #region fast-ball-table -->
       <table>
-        <caption>Run 1 Logger Pro Video Data</caption>
+        <caption>Run 2 Logger Pro Video Data</caption>
         <thead>
           <tr>
             <th>Time (s)</th>
@@ -290,6 +314,31 @@
         </tbody>
       </table>
       <!-- #endregion fast-ball-table -->
+
+      <img src="media/fast-vx-t.png" alt="Text">
+      <!-- #region fast-ball-graphs -->
+      <figure>
+        <figcaption>Run 2—Horizontal Position vs Time</figcaption>
+        <img src="media/fast-x-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 2—Vertical Position vs Time</figcaption>
+        <img src="media/fast-y-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 2—Horizontal Velocity vs Time</figcaption>
+        <img src="media/fast-vx-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 2—Vertical Velocity vs Time</figcaption>
+        <img src="media/fast-vy-t.png">
+      </figure>
+      <figure>
+        <figcaption>Run 2—Vertical Position vs Horizontal Position</figcaption>
+        <img src="media/fast-y-x.png">
+      </figure>
+      
+      <!-- #endregion fast-ball-graphs -->
     </section>
 
     <section id="conclusion">
