--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -49,6 +49,7 @@
     <section id="purpose">
       <h2>Purpose/Objective</h2>
       <p class="indent">
+        The goal of this lab was to verify the kinematic equations for projectile motion (free fall), specifically in the case where a projectile is launched horizontally at some height above the ground.
       </p>
     </section>
 
