method diagrams added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -95,6 +95,14 @@
       <h2>Method</h2>
       <p class="indent">
       </p>
+      <figure>
+        <img src="media/method-diagram-part-1.png">
+        <figcaption>Part 1 Setup</figcaption>
+      </figure>
+      <figure>
+        <img src="media/method-diagram-part-2.png">
+        <figcaption>Part 2 Setup</figcaption>
+      </figure>
     </section>
 
     <section id="data">
