part 1 method added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -93,7 +93,20 @@
 
     <section id="method">
       <h2>Method</h2>
+      <h3>Part 1</h3>
       <p class="indent">
+        See Figure 1 for a diagram of the setup used in Part 1.
+        Two wood blocks, each with a groove in the top center, were placed onto the table.
+        A metal v-channel was placed on top of the wood blocks and into the grooves. The v-channel would serve as a track for the ball.
+        Care was taken to make sure the v-channel was horizontal and level, with its end aligned with the edge of the table.
+        The height of the v-channel above the floor ($y_0$) was measured using a meter stick in order to set the scale of the video recording.
+        Next, a cell phone camera was set up to record the motion of the ball.
+        A regular, real-time recording was used (no slow motion).
+        Care was taken to make sure the cell phone ran parallel to the ball's plane of motion (in other words, the camera's line of sight was perpendicular to the plane of the ball's motion).
+        This was done so that distances between points in the video would not be shortened due to an angled perspective.
+        Once everything was set up, a steel ball bearing was rolled off the v-channel and onto the floor, with the camera recording the motion.
+        This last step was repeated for two runs, making sure to get two clear recordings of the full motion of the ball at two noticeably different initial speeds.
+        The recordings would later be analyzed using Logger Pro to get position data of the ball over time.
       </p>
       <figure>
         <img src="media/method-diagram-part-1.png">
