method part 2 added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -112,6 +112,31 @@
         <img src="media/method-diagram-part-1.png">
         <figcaption>Part 1 Setup</figcaption>
       </figure>
+      <h3>Part 2</h3>
+      <p class="indent">
+        See Figure 2 for a diagram of the setup used in Part 2.
+        Two wood blocks, each with a groove in the top center, were placed onto the table.
+        A metal v-channel was placed on top of the wood blocks and into the grooves.
+        Care was taken to make sure the v-channel was horizontal and level, with its end aligned with the edge of the table.
+        A second v-channel was set up angled into the first.
+        This second v-channel had its end secured by a clamp attached to a ring stand.
+        A ball would be able to roll down the angled v-channel, into the horizontal v-channel, then off the table.
+        For each trial, the steel ball bearing was released from the same spot on the angled v-channel.
+        A small piece of tape was used to help mark the release position used.
+        The height of the v-channel above the floor ($y_0$) was measured using a meter stick.
+        Next, a pilot launch was done to get a sense of the region the ball would land on the floor.
+        A white piece of paper was taped to the floor in that region with a sheet of carbon paper placed on top.
+        The ball was then released from the starting position for five trials, measuring the distance between the point of collision with the floor and the base of the table ($R$) for each trial.
+        The measurements of $y_0$ and $R$ would be used to calculate the theoretical initial speed of the ball ($v_0$).
+      </p>
+      <p class="indent">
+        For the next portion, a wooden board was placed against the table with its upper end just below the v-channel.
+        A magnetic angle locator was used to measure the angle of the board ($\theta$).
+        A pilot launch was done to get a sense of the region the ball would land on the board.
+        A white piece of paper was taped to the board in that region with a sheet of carbon paper held on top.
+        The ball was then released from the starting position for ten trials, measuring the distance between the point of collision with the board and the upper end of the board ($d$) for each trial.
+        The average value for $d$ would later be compared with the predicted value found using $\theta$ and $v_0$ (which was calculated using $y_0$ and $R$)
+      </p>
       <figure>
         <img src="media/method-diagram-part-2.png">
         <figcaption>Part 2 Setup</figcaption>
