--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -79,7 +79,8 @@
         describes the ball's path through the air, and is the result of substituting equation 1 into equation 2 and eliminating $t$.
       </p>
       <p class="indent">
-        In Part 2, the ball is launched onto an angled board (see the diagram in the Method section for more details). The position of the board in this coordinate system can be described by the following equation:
+        In Part 2, the ball is launched onto an angled board (see the diagram in the Method section for more details).
+        The position of the board in this coordinate system can be described by the following equation:
         $$y=y_0 - \tan(\theta) x \tag{6}$$
         where $\theta$ is the angle of the board above horizontal.
         Solving for the intersection between the board and the path of the ball yields
@@ -97,7 +98,8 @@
       <p class="indent">
         See Figure 1 for a diagram of the setup used in Part 1.
         Two wood blocks, each with a groove in the top center, were placed onto the table.
-        A metal v-channel was placed on top of the wood blocks and into the grooves. The v-channel would serve as a track for the ball.
+        A metal v-channel was placed on top of the wood blocks and into the grooves.
+        The v-channel would serve as a track for the ball.
         Care was taken to make sure the v-channel was horizontal and level, with its end aligned with the edge of the table.
         The height of the v-channel above the floor ($y_0$) was measured using a meter stick in order to set the scale of the video recording.
         Next, a cell phone camera was set up to record the motion of the ball.
