graph code removed since figures need descriptions

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -147,8 +147,11 @@
 
     <section id="data">
       <h2>Data</h2>
+
+      <h3>Part 1</h3>
       <p class="indent">
       </p>
+
       <!-- #region slow-ball-table -->
       <table>
         <caption>Run 1 Logger Pro Video Data</caption>
@@ -300,7 +303,6 @@
         <img src="media/slow-y-x.png">
         <figcaption>Run 1—Vertical Position vs Horizontal Position</figcaption>
       </figure>
-      
       <!-- #endregion slow-ball-graphs -->
 
       <!-- #region fast-ball-table -->
@@ -446,8 +448,8 @@
         <img src="media/fast-y-x.png">
         <figcaption>Run 2—Vertical Position vs Horizontal Position</figcaption>
       </figure>
-      
       <!-- #endregion fast-ball-graphs -->
+
     </section>
 
     <section id="conclusion">
