fit equations entered

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -281,28 +281,52 @@
         </tbody>
       </table>
       <!-- #endregion slow-ball-table -->
+      <p class="indent">
+        $\gdef\units#1{\ \mathrm{#1}}$
+        The above data was gathered by using the video analysis tool in Logger Pro on the recording of the first run (the run with the slower starting speed out of the two runs).
+      </p>
 
       <!-- #region slow-ball-graphs -->
       <figure>
         <img src="media/slow-x-t.png">
         <figcaption>Run 1—Horizontal Position vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $x=(0.648 \pm 0.007 \units{\dfrac{m}{s}})t + (-0.0217 \pm 0.0019 \units{m})$
+      </p>
+
       <figure>
         <img src="media/slow-y-t.png">
         <figcaption>Run 1—Vertical Position vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $y=(-4.28 \pm 0.17 \units{\dfrac{m}{s^2}})t^2 + (0.04 \pm 0.09 \units{\dfrac{m}{s}})t + (0.89 \pm 0.01 \units{m})$
+      </p>
+
       <figure>
         <img src="media/slow-vx-t.png">
         <figcaption>Run 1—Horizontal Velocity vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $v_x=(-0.2 \pm 0.1 \units{\dfrac{m}{s^2}})t + (0.69 \pm 0.03 \units{\dfrac{m}{s}})$
+        $v_x=0.63 \pm 0.6 \units{\dfrac{m}{s}}$
+      </p>
+
       <figure>
         <img src="media/slow-vy-t.png">
         <figcaption>Run 1—Vertical Velocity vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $v_y=(-7.6 \pm 0.5 \units{\dfrac{m}{s^2}})t + (-0.11 \pm 0.14 \units{\dfrac{m}{s}})$
+      </p>
+
       <figure>
         <img src="media/slow-y-x.png">
         <figcaption>Run 1—Vertical Position vs Horizontal Position</figcaption>
       </figure>
+      <p class="indent">
+        $y=(-11.72 \pm 0.14 \units{\dfrac{1}{m^2}})x^2 + (0.00 \pm 0.04 \units{\dfrac{1}{m}})x + (0.879 \pm 0.002 \units{m})$
+      </p>
       <!-- #endregion slow-ball-graphs -->
 
       <!-- #region fast-ball-table -->
@@ -426,28 +450,53 @@
         </tbody>
       </table>
       <!-- #endregion fast-ball-table -->
+      <p class="indent">
+        The above data was gathered by using the video analysis tool in Logger Pro on the recording of the second run (the run with the higher starting speed out of the two runs).
+      </p>
 
       <!-- #region fast-ball-graphs -->
       <figure>
         <img src="media/fast-x-t.png">
         <figcaption>Run 2—Horizontal Position vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $x=(1.066 \pm 0.018 \units{\dfrac{m}{s}})t + (-0.240 \pm 0.008 \units{m})$
+      </p>
+
       <figure>
         <img src="media/fast-y-t.png">
         <figcaption>Run 2—Vertical Position vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $y=(-4.37 \pm 0.13 \units{\dfrac{m}{s^2}})t^2 + (1.53 \pm 0.12 \units{\dfrac{m}{s}})t + (0.77 \pm 0.02 \units{m})$
+      </p>
+
       <figure>
         <img src="media/fast-vx-t.png">
         <figcaption>Run 2—Horizontal Velocity vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $v_x=(-0.87 \pm 0.11 \units{\dfrac{m}{s^2}})t + (1.43 \pm 0.05 \units{\dfrac{m}{s}})$
+        $y=(-4.92 \pm 0.08 \units{\dfrac{1}{m^2}})x^2 + (0.01 \pm 0.03 \units{\dfrac{1}{m}})x + (0.879 \pm 0.003 \units{m})$
+      </p>
+
+      <figure>
       <figure>
         <img src="media/fast-vy-t.png">
         <figcaption>Run 2—Vertical Velocity vs Time</figcaption>
       </figure>
+      <p class="indent">
+        $v_x=(-0.87 \pm 0.11 \units{\dfrac{m}{s^2}})t + (1.43 \pm 0.05 \units{\dfrac{m}{s}})$
+      </p>
+
       <figure>
         <img src="media/fast-y-x.png">
         <figcaption>Run 2—Vertical Position vs Horizontal Position</figcaption>
       </figure>
+      <p class="indent">
+        $y=(-4.92 \pm 0.08 \units{\dfrac{1}{m^2}})x^2 + (0.01 \pm 0.03 \units{\dfrac{1}{m}})x + (0.879 \pm 0.003 \units{m})$
+      </p>
+
       <!-- #endregion fast-ball-graphs -->
 
     </section>
