logger pro table descriptions added

--- a/reports/projectile-motion-lab/projectile-motion-lab-report.html
+++ b/reports/projectile-motion-lab/projectile-motion-lab-report.html
@@ -154,8 +154,6 @@
       <h2>Data</h2>
 
       <h3>Part 1</h3>
-      <p class="indent">
-      </p>
 
       <!-- #region slow-ball-table -->
       <table>
@@ -286,9 +284,13 @@
         </tbody>
       </table>
       <!-- #endregion slow-ball-table -->
+
       <p class="indent">
         $\gdef\units#1{\ \mathrm{#1}}$
         The above data was gathered by using the video analysis tool in Logger Pro on the recording of the first run (the run with the slower starting speed out of the two runs).
+        The scale was set using the measured value for $y_0$ ($88.4 \pm 0.2 \units{cm}$).
+        The axes were shifted such that the ball started at $x=0$ and landed at $y=0$.
+        14 data points (frames) were captured.
       </p>
 
       <!-- #region slow-ball-graphs -->
@@ -455,8 +457,12 @@
         </tbody>
       </table>
       <!-- #endregion fast-ball-table -->
+
       <p class="indent">
         The above data was gathered by using the video analysis tool in Logger Pro on the recording of the second run (the run with the higher starting speed out of the two runs).
+        The scale was set using the measured value for $y_0$ ($88.4 \pm 0.2 \units{cm}$).
+        The axes were shifted such that the ball started at $x=0$ and landed at $y=0$.
+        13 data points (frames) were captured.
       </p>
 
       <!-- #region fast-ball-graphs -->
